Finish Chilimac recipe Add Mac n Cheeze Add Assembling the Chilimac Fix bug with Bottom alignment in "Assembly"

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 .header ul {
 	display: flex;
 	justify-content: space-between;
-	gap: 8px;
+	gap: 16px;
 }
 
 .header ul li a {
